# inzas_tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  src.qrc
resources/qml/: AgentPage.qml  DownloadMission.qml  ImgButton.qml  InputText.qml  LeftBar.qml  MainWindow.qml  MyProgressBar.qml  PageAdd.qml  PageMore.qml  TitleBar.qml
src/: main.cpp
src/app/: application.cpp  application.h  download_view_model.cpp  download_view_model.h
src/core/: AgentBackend.cpp  AgentBackend.h  download_controller.cpp  download_controller.h  download_task.cpp  download_task.h
src/util/: Buffer.cpp  Buffer.h  json_tools.cpp  json_tools.h  tools.cpp  tools.h
